Add a link for meetups

--- a/angularkc/src/app/meetups/meetups.component.html
+++ b/angularkc/src/app/meetups/meetups.component.html
@@ -1,8 +1,14 @@
-<mat-list fxFlex fxLayout="column" fxLayoutAlign="space-between" fxLayoutGap="10px">
+<mat-list fxFlex fxLayout="column" fxLayoutAlign="space-between" fxLayoutGap="3px">
   <mat-list-item *ngFor="let meetup of upcomingMeetups" class="meetup-event-section">
-    <h3 matLine>{{meetup.name}}</h3>
+    <h3 matLine>
+      {{meetup.name}}
+      <span class="action-button">
+          <a mat-icon-button href="{{meetup.link}}" target="_blank"><mat-icon class="large-scaled">open_in_new</mat-icon></a>
+      </span>
+    </h3>
     <h4 matLine>{{meetup.venue.name}}</h4>
     <h4 matLine>{{meetup.time | date:'medium'}}</h4>
+
     <div matLine>
       <p [innerHTML]="meetup.description | allowHtml"> </p>
     </div>
