--- a/angularkc/src/app/meetups/meetups.component.scss
+++ b/angularkc/src/app/meetups/meetups.component.scss
@@ -7,7 +7,8 @@
     h3 {
         font-size: 2vw;
         font-weight: 100;
-        line-height: 3vw; 
+        line-height: 3vw;
+        color: #005b9f;
     }
 
     h4 {
@@ -16,9 +17,20 @@
         line-height: 2vw;
     }
 
-    background: rgba(0, 0, 0, 0.03);
+    background: #eceff1;
 }
 
 mat-list-item {
     padding: 15px;
 }
+
+.material-icons.large-scaled {
+  font-size: 1.5vw;
+  color: #494949;
+}
+
+.action-button {
+  padding-left: 25px;
+}
+
+
